--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,12 @@ python:
   - "2.7"
 
 # command to install dependencies
-install: 
+install:
   - pip install -r requirements.txt
+
+# command to run tests
+script:
+  - python -m unittest discover app/tests/
+
+after_success:
+  - coveralls
