--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==0.10.1
 Flask-Login==0.3.2
 itsdangerous==0.24
 Jinja2==2.8
+linecache2==1.0.0
 MarkupSafe==0.23
 matplotlib==1.5.1
 mccabe==0.4.0
@@ -15,4 +16,6 @@ pyparsing==2.1.1
 python-dateutil==2.5.3
 pytz==2016.4
 six==1.10.0
+traceback2==1.4.0
+unittest2==1.1.0
 Werkzeug==0.11.9
