--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-coverage==4.0.3
+Adafruit-GPIO==1.0.0
+Adafruit-PureIO==0.2.0coverage==4.0.3
 cycler==0.10.0
 flake8==2.5.4
 Flask==0.10.1
@@ -19,3 +20,5 @@ six==1.10.0
 traceback2==1.4.0
 unittest2==1.1.0
 Werkzeug==0.11.9
+Adafruit-GPIO==1.0.0
+Adafruit-PureIO==0.2.0
